Move tenant content from razor views to pure html in wwwroot folder

--- a/League.Demo/Configuration/Tenant.OtherOrg.Development.config
+++ b/League.Demo/Configuration/Tenant.OtherOrg.Development.config
@@ -69,7 +69,7 @@
     </SiteContext>
     <OrganizationContext>
         <!-- The full name of the organization. -->
-        <Name>Volleyball Other Test League</Name>
+        <Name>Volleyball Other League</Name>
         <!-- The short version of the organization's name. -->
         <ShortName>Other League</ShortName>
         <Description>The other league for test purposes.</Description>
