--- a/League.Demo/League.Demo.csproj
+++ b/League.Demo/League.Demo.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk.Web">
+﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
     <Product>League.Demo</Product>
     <TargetFramework>net8.0</TargetFramework>
@@ -17,7 +17,7 @@
   <ItemGroup>
     <Folder Include="logs\" />
     <Folder Include="wwwroot\" />
-  </ItemGroup>
+    </ItemGroup>
   <ItemGroup>
     <Compile Update="Views\ViewNames.cs">
       <DependentUpon>ViewNames.tt</DependentUpon>
