Refactor tenant-specific content (#210)
* Move tenant content from razor views to pure html in wwwroot folder

* Move controller TenantContent from project Demo to League

* Tenant content html have the same name as the url segment for the topic

e.g.:
* tenant-content\otherorg_index.html    (info about the tenant)
* tenant-content\otherorg_news.html    (posted news)
* tenant-content\otherorg_rule-of-game.html   (tenant rule of game)
* tenant-content\Files\otherorg_ball.png   (uploaded tenant content files)

* Include tenant-content for League.Demo in the repository

* Update comments in CustomMainNavigationNodeBuilder

* Refactor tenant content handling and navigation

* Created a tenant content folder `/wwwroot/tenants-content`
* HTML content is file <topic>.html
* Metadata is in file <topic>.json
* Created new home.html, home.json, news.html, news.json, rule-of-game.html, and rule-of-game.json files with metadata and placeholder content.
* Added a new home.cshtml view to render tenant content.
* Simplified footer in _Layout.cshtml by removing tenant-specific logic for the "Contact" link.
* Updated `WebAppStartup` to use scoped `MainNavigationNodeBuilder` and singleton `TenantContentProvider`

* Updated WebAppStartup.cs to use `MainNavigationNodeBuilder` instead of `CustomMainNavigationNodeBuilder `
* Deleted `CustomMainNavigationNodeBuilder` class and related usings.
* Added class `ITenantContentProvider` to handel tenant content
* Added a new `ContentItem` class in ContentItem.cs to represent a content item for a tenant.
* Introduced a new interface `ITenantContentProvider`
* Implemented `ITenantContentProvider` interface in `TenantContentProvider`
* Added new methods in `MainNavigationNodeBuilder` to create tenant-specific navigation nodes.
* Updated `TenantContent` controller to use `ITenantContentProvider` and added a new Home action.

* Updated `IMainNavigationNodeBuilder` interface to make GetNavigationNodes method asynchr

--- a/.gitignore
+++ b/.gitignore
@@ -272,4 +272,4 @@ paket-files/
 # But don't ignore these directories
 !/League.Demo/wwwroot/images/
 !/League.Demo/wwwroot/teamphoto/
-
+!/League.Demo/wwwroot/pages/
