Move `League` wwwroot static files to embedded resources
- Modified `League.csproj` to prevent automatic copying of `wwwroot` files; now included as embedded resources.
- Added `EmbeddedFileProvider` in `Configure` method to serve static files from embedded resources alongside existing static `wwwroot` files.
- Bump version to v8.2.0

--- a/League/League.csproj
+++ b/League/League.csproj
@@ -224,6 +224,11 @@ Localizations for English and German are included. The library is in operation o
     </ItemGroup>
     <ItemGroup>
         <EmbeddedResource Include="Templates\Email\**\*.tpl" />
+        <!-- Stop automatically copying wwwroot files to the output directory -->
+        <Content Remove="wwwroot\**\*.*" />
+        <!-- All wwwroot files only exist as embedded resource -->
+        <!-- Add FileProvider = new EmbeddedFileProvider(assembly, "League.wwwroot") -->
+        <EmbeddedResource Include="wwwroot\**\*.*" />
     </ItemGroup>
     <ItemGroup>
         <Service Include="{508349b6-6b84-4df5-91f0-309beebad82d}" />
