Refactor `Tenant` configuration
- Email addresses in `SiteContext` are stored in `MailAddresses`. They are used for recepients of automatic emails.
- `TournamentContext`: Introduced `ApplicationStart` and `ApplicationEnd` fields for application periods.
- Refactored mail merge address handling in based on `MailAddresses`
- Modified `ISiteContext` and `ITournamentContext` interfaces.
- Added `MailMergeAddressCollectionExtensions` for simple mapping of `MailAddresses` to `MailMergeAddresses`
- Updated XML comments and unit tests

--- a/League.Demo/Configuration/Tenant.Default.Development.config
+++ b/League.Demo/Configuration/Tenant.Default.Development.config
@@ -5,7 +5,7 @@
     <!-- The tenant GUID. -->
     <Guid>bf2e2412-c610-4521-ae15-7bda286e4480</Guid>
     <!-- May only be true for a single tenant in a tenant store. -->
-    <IsDefault>True</IsDefault>
+    <IsDefault>true</IsDefault>
     <SiteContext>
         <!-- The position of the tenant within tenant lists (e.g. navigation). -->
         <Position>0</Position>
@@ -18,45 +18,15 @@
         <!-- The session name used for the tenant. -->
         <SessionName>.League</SessionName>
         <!-- If true, the site will not be shown in the navigation menu. -->
-        <HideInMenu>True</HideInMenu>
-        <!-- Email contact details. -->
-        <Email>
-            <!-- "From" mailbox address for the contact form -->
-            <ContactFrom>
-                <!-- The display name of a recipient. -->
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <!-- The email address of a recipient. -->
-                <Address>league@volleyball-liga.de</Address>
-            </ContactFrom>
-            <!-- "To" mailbox address for the contact form -->
-            <ContactTo>
-                <!-- The display name of a recipient. -->
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <!-- The email address of a recipient. -->
-                <Address>league@volleyball-liga.de</Address>
-            </ContactTo>
-            <!-- General "To" mailbox address for emails generated programmatically -->
-            <GeneralTo>
-                <!-- The display name of a recipient. -->
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <!-- The email address of a recipient. -->
-                <Address>league@volleyball-liga.de</Address>
-            </GeneralTo>
-            <!-- General "From" mailbox address for emails generated programmatically -->
-            <GeneralFrom>
-                <!-- The display name of a recipient. -->
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <!-- The email address of a recipient. -->
-                <Address>league@volleyball-liga.de</Address>
-            </GeneralFrom>
-            <!-- General "BCC" mailbox address for emails generated programmatically -->
-            <GeneralBcc>
-                <!-- The display name of a recipient. -->
-                <DisplayName>Volleyball-Liga</DisplayName>
-                <!-- The email address of a recipient. -->
-                <Address>league@volleyball-liga.de</Address>
-            </GeneralBcc>
-        </Email>
+        <HideInMenu>true</HideInMenu>
+        <!-- Recipients for generated emails. -->
+        <MailAddresses>
+            <MailAddress Kind="ContactFrom" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="ContactTo" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="GeneralFrom" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="GeneralTo" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="GeneralBcc" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+        </MailAddresses>
         <!-- Notifications sent before and after matches. -->
         <MatchNotifications>
             <!-- Number of days before the next match will be announced. 0 for none, negative number days. -->
@@ -77,7 +47,7 @@
         <HomepageUrl>https://volleyball-liga.de/</HomepageUrl>
         <Bank>
             <!-- If true, bank details are part of the confirmation email when registering a team. -->
-            <ShowBankDetailsInConfirmationEmail>True</ShowBankDetailsInConfirmationEmail>
+            <ShowBankDetailsInConfirmationEmail>true</ShowBankDetailsInConfirmationEmail>
             <!-- The name of the payment recipient, usually the organization name. -->
             <Recipient>axuno - Testorganization</Recipient>
             <!-- The name of the bank where a payment is directed. -->
@@ -105,10 +75,12 @@
     <TournamentContext>
         <!-- The ID of the tournament which will be used for new teams' applications -->
         <ApplicationTournamentId>0</ApplicationTournamentId>
-        <!-- True, if teams' applications are allowed, otherwise false -->
-        <ApplicationAllowed>True</ApplicationAllowed>
-        <!-- The deadline for new teams' applications -->
-        <ApplicationDeadline>01/01/2021 00:00:00</ApplicationDeadline>
+        <!-- The UTC date from which teams' applications are allowed. -->
+        <!-- Format: 'yyyy-MM-dd HH:mm:ss' or 'MM/dd/yyyy HH:mm:ss' -->
+        <ApplicationStart>10/23/2020 00:00:00</ApplicationStart>
+        <!-- The UTC deadline for new teams' applications. -->
+        <!-- Format: 'yyyy-MM-dd HH:mm:ss' or 'MM/dd/yyyy HH:mm:ss' -->
+        <ApplicationEnd>01/01/2021 00:00:00</ApplicationEnd>
         <!-- The ID of the tournament which will be used for to display maps -->
         <MapTournamentId>0</MapTournamentId>
         <!-- The ID of the tournament which will be used to display team data -->
@@ -121,23 +93,23 @@
         <FixtureRuleSet>
             <!-- The time when matches start and end normally (e.g. from 18:00 - 21:00 h) -->
             <RegularMatchStartTime>
-                <!-- Earliest start time for a match -->
+                <!-- Earliest start time for a match (in local time) -->
                 <MinDayTime>18:00:00</MinDayTime>
-                <!-- Latest start time for a match -->
+                <!-- Latest start time for a match (in local time) -->
                 <MaxDayTime>21:00:00</MaxDayTime>
             </RegularMatchStartTime>
             <!-- The duration which is used to generate fixtures and to determine periods where a venue is occupied -->
             <PlannedDurationOfMatch>02:00:00</PlannedDurationOfMatch>
             <!-- If set to true, when editing a fixture the match time must be set -->
-            <PlannedMatchDateTimeMustBeSet>True</PlannedMatchDateTimeMustBeSet>
+            <PlannedMatchDateTimeMustBeSet>true</PlannedMatchDateTimeMustBeSet>
             <!-- If set to true, the planned match time must no include any dates found in ExcludeMatchDate table entries -->
-            <CheckForExcludedMatchDateTime>True</CheckForExcludedMatchDateTime>
+            <CheckForExcludedMatchDateTime>true</CheckForExcludedMatchDateTime>
             <!-- If set to true, the planned match time must stay within the current leg date boundaries. If false, the planned time must stay with in any leg date boundaries. -->
-            <PlannedMatchTimeMustStayInCurrentLegBoundaries>False</PlannedMatchTimeMustStayInCurrentLegBoundaries>
+            <PlannedMatchTimeMustStayInCurrentLegBoundaries>false</PlannedMatchTimeMustStayInCurrentLegBoundaries>
             <!-- If set to true, when editing a fixture the venue must be set -->
-            <PlannedVenueMustBeSet>True</PlannedVenueMustBeSet>
+            <PlannedVenueMustBeSet>true</PlannedVenueMustBeSet>
             <!-- If true, when checking whether teams already have a match at a certain moment, only the date will be used (i.e. only 1 match per calendar date) -->
-            <UseOnlyDatePartForTeamFreeBusyTimes>True</UseOnlyDatePartForTeamFreeBusyTimes>
+            <UseOnlyDatePartForTeamFreeBusyTimes>true</UseOnlyDatePartForTeamFreeBusyTimes>
         </FixtureRuleSet>
         <!-- The max. number of days after RealStart where results may be changed. Negative value means 'unlimited' -->
         <MaxDaysForResultCorrection>-1</MaxDaysForResultCorrection>
@@ -146,9 +118,9 @@
             <!-- Rules for the HomeMatchTime of a team -->
             <HomeMatchTime>
                 <!-- If true, HomeMatchTime will be shown on team forms. If false, IsEditable, DaysOfWeekRange and ErrorIfNotInDaysOfWeekRange are irrelevant. -->
-                <IsEditable>True</IsEditable>
+                <IsEditable>true</IsEditable>
                 <!-- If true, the HomeMatchTime must be set, i.e. cannot be null/unspecified -->
-                <MustBeSet>True</MustBeSet>
+                <MustBeSet>true</MustBeSet>
                 <!-- Allowed days of a week -->
                 <DaysOfWeekRange>
                     <DayOfWeek>Monday</DayOfWeek>
@@ -160,19 +132,19 @@
                     <DayOfWeek>Sunday</DayOfWeek>
                 </DaysOfWeekRange>
                 <!-- If true, entries not in 'DaysOfWeekRange' are errors (else: warning) -->
-                <ErrorIfNotInDaysOfWeekRange>False</ErrorIfNotInDaysOfWeekRange>
+                <ErrorIfNotInDaysOfWeekRange>false</ErrorIfNotInDaysOfWeekRange>
             </HomeMatchTime>
             <!-- Rules for the HomeVenue of a team. -->
             <HomeVenue>
                 <!-- If true, the HomeVenue must be set, i.e. cannot be null/unspecified. -->
                 <!-- If false, when auto-creating fixtures the team will only have away-matches (i.e. is always the guest team). -->
-                <MustBeSet>True</MustBeSet>
+                <MustBeSet>true</MustBeSet>
             </HomeVenue>
         </TeamRuleSet>
         <!-- Rules for referee master data -->
         <RefereeRuleSet>
-	        <!-- Rules for organizing referees -->
-	        <RefereeType>None</RefereeType>
+            <!-- Rule for organizing referees -->
+            <RefereeType>None</RefereeType>
         </RefereeRuleSet>
     </TournamentContext>
 </TenantContext>
