--- a/League.Demo/Configuration/Tenant.Default.Production.config
+++ b/League.Demo/Configuration/Tenant.Default.Production.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <TenantContext>
     <!-- Identifies the tenant. Value is also used for tenant-specific file names. -->
     <Identifier>League</Identifier>
@@ -23,9 +23,9 @@
         <MailAddresses>
             <MailAddress Kind="ContactFrom" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
             <MailAddress Kind="ContactTo" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
-            <MailAddress Kind="GeneralFrom" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
-            <MailAddress Kind="GeneralTo" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
-            <MailAddress Kind="GeneralBcc" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="AutoMailFrom" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="AutoMailTo" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
+            <MailAddress Kind="AutoMailBcc" Address="league@volleyball-liga.de" DisplayName="Volleyball-Liga" />
         </MailAddresses>
         <!-- Notifications sent before and after matches. -->
         <MatchNotifications>
