feat(background-tasks): add bounded-concurrency service and queue refactors
Summary:
- Introduce ConcurrentBackgroundQueueService with configurable MaxConcurrentCount and polling delay
- Add capacity check logic and per-task execution wrapper with robust cancellation/exception handling
- Refine task startup loop to start as many tasks as available capacity allows
- Strengthen logging (startup, dequeue failures, per-task lifecycle, shutdown phases)
- Ensure thread-safe active task count tracking via Volatile/Interlocked
- Update IBackgroundQueue / existing services to interoperate with the new concurrent service (interface and usage alignment)
- Adjust BackgroundQueue/BackgroundQueueService for compatibility and improved resilience
- Expand/modify BackgroundQueueTests to cover concurrency-limited behavior and edge cases
- Tweak NLog development config to surface new debug logs

Rationale:
Provides controlled parallelism for background work, preventing resource exhaustion while retaining throughput. Improves observability and graceful host shutdown behavior.

BREAKING CHANGE (interface signatures changed): Consumers of IBackgroundQueue may need to adapt to updated method names or semantics.

--- a/League.Demo/Configuration/NLog.Development.config
+++ b/League.Demo/Configuration/NLog.Development.config
@@ -10,6 +10,10 @@
       <add assembly="NLog.Web.AspNetCore"/>
     </extensions>
 
+	<variable name="consoleLayout"
+	          value="${time:format=HH\\:mm\\:ss.fff}|${level:uppercase=true:padding=5}|
+${logger:shortName=true}|${message}${onexception:inner=${exception:format=ToString}}" />
+
     <!-- the targets to write to -->
     <targets async="true">
       <!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
@@ -24,6 +28,9 @@
       <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
               layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
+	  <!-- the console logging -->	
+	  <target xsi:type="Console" name="console" layout="${consoleLayout}" />
+		
       <!-- write to void i.e. just remove -->
       <target xsi:type="Null" name="nowhere" />
     </targets>
@@ -37,10 +44,10 @@
         <logger name="Microsoft.*" maxlevel="Info" writeTo="nowhere" final="true" />
 		
         <!-- Other log content -->
-        <logger name="TournamentManager.*" minlevel="Info" writeTo="ownFile-web" final="true" />
-        <logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web" final="true" />
-        <logger name="League.*" minlevel="Trace" writeTo="ownFile-web" final="true" />
-        <logger name="Axuno.*" minlevel="Trace" writeTo="ownFile-web" final="true" />
-        <logger name="*" minlevel="Info" writeTo="ownFile-web" />
+        <logger name="TournamentManager.*" minlevel="Debug" writeTo="ownFile-web,console" final="true" />
+        <logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web,console" final="true" />
+        <logger name="League.*" minlevel="Debug" writeTo="ownFile-web,console" final="true" />
+        <logger name="Axuno.*" minlevel="Debug" writeTo="ownFile-web,console" final="true" />
+        <logger name="*" minlevel="Info" writeTo="ownFile-web,console" />
     </rules>
 </nlog>
