--- a/League/package.json
+++ b/League/package.json
@@ -23,13 +23,13 @@
     "grunt-sass": "3.1.0",
     "js-cookie": "2.2.1",
     "jsnlog": "2.30.0",
-    "node-sass": "9.0.0",
+    "sass": "^1.94.1",
     "postcss": "^8.4.38",
     "@popperjs/core": "2.11.8",
     "@eonasdan/tempus-dominus": "6.9.6",
     "set-value": ">=4.1.0"
   },
-    "dependencies": {
-        "uglify-js": "3.17.4"
-    }
+  "dependencies": {
+    "uglify-js": "3.17.4"
+  }
 }
