Update NLog to v6, modernize logging
- Upgrade NLog and NLog.Web.AspNetCore to v6.x; add NLog.Targets.Trace package
- Refactor NLog config: improve console layout, and add llblgenFile target for development
- Restructure logging rules for better separation of own/framework logs; remove Null target
- Refactor Program.cs and startup classes for new NLog 6 API; remove ILoggerFactory dependency from service config
- Integrate LLBLGen Pro tracing with NLog via NLogTraceListener

--- a/League/Configuration/NLog.Development.config
+++ b/League/Configuration/NLog.Development.config
@@ -5,42 +5,67 @@
       internalLogLevel="Info"
       internalLogFile="logs\internal-nlog.log">
 
-    <extensions>
-      <!-- Make these renderers available: https://nlog-project.org/config/?tab=layout-renderers&search=package:nlog.web.aspnetcore -->
-      <add assembly="NLog.Web.AspNetCore"/>
-    </extensions>
+	<extensions>
+		<!-- Make these renderers available: https://nlog-project.org/config/?tab=layout-renderers&search=package:nlog.web.aspnetcore -->
+		<add assembly="NLog.Web.AspNetCore"/>
+	</extensions>
 
-    <!-- the targets to write to -->
-    <targets async="true">
-      <!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
-      <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}" />
+	<variable name="consoleLayout"
+	          value="${longdate}|${level:uppercase=true:padding=5}|${logger:shortName=true}|${message}${onexception:inner=${exception:format=ToString}}" />
 
-      <!-- "not found" file log, only own logs. -->
-      <target xsi:type="File" name="notFoundFile-web" fileName="${var:logDirectory}logs\nlog-not-found-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message}" />
+	<!-- the targets to write to -->
+	<targets async="true">
+		<!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
+		<target xsi:type="File"
+				name="allfile"
+				fileName="${var:logDirectory}logs/nlog-all-${shortdate}.log"
+				keepFileOpen="true"
+				openFileCacheTimeout="5"
+				layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}" />
 
-      <!-- another file log, only own logs. -->
-      <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+		<!-- "not found" file log, only own logs. -->
+		<target xsi:type="File"
+				name="notFoundFile-web"
+				fileName="${var:logDirectory}logs/nlog-not-found-${shortdate}.log"
+				keepFileOpen="true"
+				openFileCacheTimeout="5"
+				layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message}" />
 
-      <!-- write to void i.e. just remove -->
-      <target xsi:type="Null" name="nowhere" />
-    </targets>
+		<!-- another file log, only own logs. -->
+		<target xsi:type="File"
+				name="ownFile-web"
+				fileName="${var:logDirectory}logs/nlog-own-${shortdate}.log"
+				keepFileOpen="true"
+				openFileCacheTimeout="5"
+				layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
-    <!-- rules to map from logger name to target -->
-    <rules>
-        <!-- All logs, including from Microsoft -->
-        <logger name="*" minlevel="Info" writeTo="allfile" />
+		<!-- Trace target for LLBLGen Pro logging -->
+		<target xsi:type="File"
+		        name="llblgenFile"
+		        fileName="${var:logDirectory}logs/nlog-llblgen-${shortdate}.log"
+		        keepFileOpen="true"
+		        openFileCacheTimeout="5"
+		        layout="${message}" />
 
-        <!--Skip non-critical Microsoft logs and so log only own logs-->
-        <logger name="Microsoft.*" maxlevel="Info" writeTo="nowhere" final="true" />
-		
-        <!-- Other log content -->
-        <logger name="TournamentManager.*" minlevel="Info" writeTo="ownFile-web" final="true" />
-        <logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web" final="true" />
-        <logger name="League.*" minlevel="Trace" writeTo="ownFile-web" final="true" />
-        <logger name="Axuno.*" minlevel="Trace" writeTo="ownFile-web" final="true" />
-        <logger name="*" minlevel="Info" writeTo="ownFile-web" />
-    </rules>
+		<target xsi:type="Console" name="console" layout="${consoleLayout}" />
+	</targets>
+
+	<!-- rules to map from logger name to target -->
+	<rules>
+		<!-- LLBLGen Pro logging -->
+		<logger name="NLogTraceListener" minlevel="Trace" writeTo="llblgenFile" final="true" />
+
+		<!-- Warn and above: continue to next rules -->
+		<logger name="Microsoft.*" finalMinLevel="Warn" />
+
+		<!-- Info and above: written to allfile, then process next -->
+		<logger name="*" minLevel="Info" writeTo="allfile" />
+
+		<!-- Other log content; final="true" stops further processing -->
+		<logger name="TournamentManager.*" minlevel="Info" writeTo="ownFile-web,console" final="true" />
+		<logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web,console" final="true" />
+		<logger name="League.*" minlevel="Debug" writeTo="ownFile-web,console" final="true" />
+		<logger name="Axuno.*" minlevel="Debug" writeTo="ownFile-web,console" final="true" />
+		<logger name="*" minlevel="Info" writeTo="ownFile-web,console" />
+	</rules>
 </nlog>
