--- a/League/Configuration/NLog.Internal.config
+++ b/League/Configuration/NLog.Internal.config
@@ -13,24 +13,27 @@
     <!-- the targets to write to -->
     <targets>
         <!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
-        <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log" keepFileOpen="true" openFileCacheTimeout="5" concurrentWrites="true"
+        <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log" keepFileOpen="true" openFileCacheTimeout="5"
                 layout="${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}${newline}" />
 
         <!-- another file log, only own logs. -->
-        <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" openFileCacheTimeout="5" concurrentWrites="true"
+        <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" openFileCacheTimeout="5"
                 layout="${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}${newline}" />
 
-        <!-- write to void i.e. just remove -->
-        <target xsi:type="Null" name="nowhere" />
-    </targets>
+	</targets>
 
     <!-- rules to map from logger name to target -->
     <rules>
-        <!-- All logs, including from Microsoft -->
-        <logger name="*" minlevel="Info" writeTo="allfile" />
+	    <!-- All logs, including from Microsoft -->
+	    <logger name="*" minLevel="Warn" writeTo="allfile" />
 
-        <!-- Skip Microsoft logs with final=true, and so only log own logs -->
-        <logger name="Microsoft.*" minlevel="Info" writeTo="nowhere" final="true" />
-        <logger name="*" minlevel="Info" writeTo="ownFile-web" />
+	    <!--Skip non-critical Microsoft logs and so log only own logs-->
+	    <logger name="Microsoft.*" finalMinLevel="Warn" />
+
+	    <rules>
+		    <logger name="*" minlevel="Debug" writeTo="llblgenTrace" />
+	    </rules>
+
+		<logger name="*" minlevel="Info" writeTo="ownFile-web" />
     </rules>
 </nlog>
