--- a/League.Demo/Configuration/NLog.Production.config
+++ b/League.Demo/Configuration/NLog.Production.config
@@ -5,42 +5,64 @@
       internalLogLevel="Warn"
       internalLogFile="logs\internal-nlog.log">
 
-    <extensions>
-      <!-- Make these renderers available: https://nlog-project.org/config/?tab=layout-renderers&search=package:nlog.web.aspnetcore -->
-      <add assembly="NLog.Web.AspNetCore"/>
-    </extensions>
+	<extensions>
+		<!-- Make these renderers available: https://nlog-project.org/config/?tab=layout-renderers&search=package:nlog.web.aspnetcore -->
+		<add assembly="NLog.Web.AspNetCore"/>
+	</extensions>
 
-    <!-- the targets to write to -->
-    <targets async="true">
-      <!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
-      <target xsi:type="File" name="allfile" fileName="${var:logDirectory}logs\nlog-all-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}" />
+	<!-- the targets to write to -->
+	<targets async="true">
+		<!-- write logs to file ** ${var:logDirectory} is set in Program.Main() -->
+		<target xsi:type="File"
+		        name="allfile"
+		        fileName="${var:logDirectory}logs/nlog-all-${shortdate}.log"
+		        keepFileOpen="true"
+		        openFileCacheTimeout="5"
+		        layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace}" />
 
-      <!-- "not found" file log, only own logs. -->
-      <target xsi:type="File" name="notFoundFile-web" fileName="${var:logDirectory}logs\nlog-not-found-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message}" />
+		<!-- "not found" file log, only own logs. -->
+		<target xsi:type="File"
+		        name="notFoundFile-web"
+		        fileName="${var:logDirectory}logs/nlog-not-found-${shortdate}.log"
+		        keepFileOpen="true"
+		        openFileCacheTimeout="5"
+		        layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message}" />
 
-      <!-- another file log, only own logs. -->
-      <target xsi:type="File" name="ownFile-web" fileName="${var:logDirectory}logs\nlog-own-${shortdate}.log" keepFileOpen="true" concurrentWrites="true"
-              layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
+		<!-- another file log, only own logs. -->
+		<target xsi:type="File"
+		        name="ownFile-web"
+		        fileName="${var:logDirectory}logs/nlog-own-${shortdate}.log"
+		        keepFileOpen="true"
+		        openFileCacheTimeout="5"
+		        layout="${aspnet-request:header=JSNLog-RequestId:whenEmpty=${aspnet-TraceIdentifier}} ${longdate}|${event-properties:item=EventId.Id}|${uppercase:${level}}|${logger}|${message} ${exception:format=ToString,StackTrace:maxInnerExceptionLevel=5:innerFormat=shortType,message,method}${newline}   |url: ${aspnet-request-url}|action: ${aspnet-mvc-action}" />
 
-      <!-- write to void i.e. just remove -->
-      <target xsi:type="Null" name="nowhere" />
-    </targets>
+		<!-- Trace target for LLBLGen Pro logging -->
+		<target xsi:type="File"
+		        name="llblgenFile"
+		        fileName="${var:logDirectory}logs/nlog-llblgen-${shortdate}.log"
+		        keepFileOpen="true"
+		        openFileCacheTimeout="5"
+		        layout="${message}" />
 
-    <!-- rules to map from logger name to target -->
-    <rules>
-        <!-- All logs, including from Microsoft -->
-        <logger name="*" minlevel="Warn" writeTo="allfile" />
+		<target xsi:type="Console" name="console" layout="${consoleLayout}" />
+	</targets>
 
-        <!-- Skip Microsoft logs with final=true, and so only log own logs -->
-        <logger name="Microsoft.*" minlevel="Trace" writeTo="nowhere" final="true" />
-		
-        <!-- Other log content -->
-        <logger name="TournamentManager.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
-        <logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web" final="true" />
-        <logger name="League.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
-        <logger name="Axuno.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
-        <logger name="*" minlevel="Info" writeTo="ownFile-web" />    
+	<!-- rules to map from logger name to target -->
+	<rules>
+		<!-- LLBLGen Pro logging (disabled in code for production) -->
+		<logger name="NLogTraceListener" minlevel="Trace" writeTo="llblgenFile" final="true" />
+
+		<!-- Warn and above: continue to next rules -->
+		<logger name="Microsoft.*" finalMinLevel="Warn" />
+
+		<!-- Warn and above: written to allfile, then process next -->
+		<logger name="*" minLevel="Warn" writeTo="allfile" />
+
+		<!-- Other log content; final="true" stops further processing -->
+		<logger name="TournamentManager.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
+		<logger name="League.NotFound" minlevel="Info" writeTo="notFoundFile-web" final="true" />
+		<logger name="League.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
+		<logger name="Axuno.*" minlevel="Warn" writeTo="ownFile-web" final="true" />
+		<logger name="*" minlevel="Warn" writeTo="ownFile-web" />
 	</rules>
 </nlog>
